--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
+        <a href="/index.html" class="logo">
+            Web<span class="logo-dot">Studio</span>
+        </a>
+        <nav>
+            <ul>
+                <li>Студия</li>
+                <li>Портфолио</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
+        <div class="contact-header">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </div>
+       
+
+
+    </header>
 
     <main></main>
 
