--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     
     <header>
         <a href="/index.html" class="logo">
-            Web<span class="logo-dot">Studio</span>
+            Web<span class="logo-secondword1">Studio</span>
         </a>
         <nav>
             <ul>
@@ -19,18 +19,106 @@
                 <li>Контакты</li>
             </ul>
         </nav>
-        <div class="contact-header">
+        <div class="header-contact">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
-       
-
-
     </header>
 
-    <main></main>
+    <main>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-button">Заказать услугу</button>
+        </section>   
+        <section class="skills">
+            <h2 class="skills-title">Наши преимущества</h2>
+            <ul class="skils-list">
+                <li class="skills-item">
+                    <H3  class="skills-item-titles">Внимание к деталям</H3>
+                    <p class="skills-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li class="skills-item">
+                    <H3  class="skills-item-titles">Пунктуальность</H3>
+                    <p class="skills-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li class="skills-item">
+                    <H3  class="skills-item-titles">Планирование</H3>
+                    <p class="skills-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li class="skills-item">
+                    <H3  class="skills-item-titles">Современные</H3>
+                    <p class="skills-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section class="work">
+            <h2 class="work-titles">Чем мы занимаемся</h2>
+            <ul class="work-list">
+                <li class="work-item">
+                    <a href=""><img src="/images/pic1.png" alt="codding in tablet with keyboard"></a>                        
+                </li>
+                <li class="work-item">
+                    <a href=""><img src="/images/pic2.png" alt="mobil apps design"></a>
+                </li>
+                <li class="work-item">
+                    <a href=""><img src="/images/pic3.png" alt="color disign"></a>
+                </li>
+            </ul>
+        </section>
+<!-- НАША КОМАНДА -->
+        <section class="team">
+            <h2 class="team-titles">Наша команда</h2>
+            <ul class="team-list">
+                <li class="team-item">
+                    <figure>
+                        <img src="/images/command1.jpg" alt="Игорь Демьяненко">
+                        <figcaption class="team-name">Игорь Демьяненко</figcaption>
+                        <figcaption class="team-position">Product Designer</figcaption>
+                    </figure>
+                </li>
+                <li class="team-item">
+                    <figure>
+                        <img src="/images/command2.jpg" alt="Ольга Репина">
+                        <figcaption class="team-name">Ольга Репина</figcaption>
+                        <figcaption class="team-position">Frontend Developer</figcaption>
+                    </figure>
+                </li>
+                <li class="team-item">
+                    <figure>
+                        <img src="/images/command3.jpg" alt="Николай Тарасов">
+                        <figcaption class="team-name">Николай Тарасов</figcaption>
+                        <figcaption class="team-position">Marketing</figcaption>
+                    </figure>
+                </li>
+                <li class="team-item">
+                    <figure>
+                        <img src="/images/command4.jpg" alt="Михаил Ермаков">
+                        <figcaption class="team-name">Михаил Ермаков</figcaption>
+                        <figcaption class="team-position">UI Designer</figcaption>                        
+                    </figure>
+                </li>
+            </ul>
+        </section>
+    </main>
+<!-- ПОДВАЛ -->
+    <footer class="footer">
+        <a href="/index.html" class="footer-logo">
+        Web<span class="logo-secondword2">Studio</span>
+        </a>
+        <h3 class="footer-contacts-title">Контакты</h3>
+        <ul class="footer-contacts-list">
+            <li class="footer-contacts-item">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-contacts-item-mail"><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></li>
+            <li class="footer-contacts-item-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
 
-    <footer></footer>
+
+        <!-- <div class="footer-contact">
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></p>
+            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+        </div> -->
+    </footer>
 
 
 </body>
