--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             <h2 class="work-titles">Чем мы занимаемся</h2>
             <ul class="work-list">
                 <li class="work-item">
-                    <a href=""><img src="/images/pic1.png" alt="codding in tablet with keyboard"></a>                        
+                    <a href=""><img src="./images/pic1.png" alt="codding in tablet with keyboard"></a>                        
                 </li>
                 <li class="work-item">
-                    <a href=""><img src="/images/pic2.png" alt="mobil apps design"></a>
+                    <a href=""><img src="./images/pic2.png" alt="mobil apps design"></a>
                 </li>
                 <li class="work-item">
-                    <a href=""><img src="/images/pic3.png" alt="color disign"></a>
+                    <a href=""><img src="./images/pic3.png" alt="color disign"></a>
                 </li>
             </ul>
         </section>
@@ -71,28 +71,28 @@
             <ul class="team-list">
                 <li class="team-item">
                     <figure>
-                        <img src="/images/command1.jpg" alt="Игорь Демьяненко">
+                        <img src="./images/command1.jpg" alt="Игорь Демьяненко">
                         <figcaption class="team-name">Игорь Демьяненко</figcaption>
                         <figcaption class="team-position">Product Designer</figcaption>
                     </figure>
                 </li>
                 <li class="team-item">
                     <figure>
-                        <img src="/images/command2.jpg" alt="Ольга Репина">
+                        <img src="./images/command2.jpg" alt="Ольга Репина">
                         <figcaption class="team-name">Ольга Репина</figcaption>
                         <figcaption class="team-position">Frontend Developer</figcaption>
                     </figure>
                 </li>
                 <li class="team-item">
                     <figure>
-                        <img src="/images/command3.jpg" alt="Николай Тарасов">
+                        <img src="./images/command3.jpg" alt="Николай Тарасов">
                         <figcaption class="team-name">Николай Тарасов</figcaption>
                         <figcaption class="team-position">Marketing</figcaption>
                     </figure>
                 </li>
                 <li class="team-item">
                     <figure>
-                        <img src="/images/command4.jpg" alt="Михаил Ермаков">
+                        <img src="./images/command4.jpg" alt="Михаил Ермаков">
                         <figcaption class="team-name">Михаил Ермаков</figcaption>
                         <figcaption class="team-position">UI Designer</figcaption>                        
                     </figure>
