--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href=""><img src="./images/pic2.png" alt="mobil apps design"></a>
                 </li>
                 <li class="work-item">
-                    <a href=""><img src="./images/pic3.png" alt="color disign"></a>
+                    <a href=""><img src="./images/pic3.png" alt="color design"></a>
                 </li>
             </ul>
         </section>
@@ -72,29 +72,33 @@
                 <li class="team-item">
                     <figure>
                         <img src="./images/command1.jpg" alt="Игорь Демьяненко">
-                        <figcaption class="team-name">Игорь Демьяненко</figcaption>
-                        <figcaption class="team-position">Product Designer</figcaption>
+                        <figcaption class="team-name">Игорь Демьяненко<br>
+                        <span class="team-position">Product Designer</span></figcaption>
+                        <!-- <figcaption class="team-position">Product Designer</figcaption> -->
                     </figure>
                 </li>
                 <li class="team-item">
                     <figure>
                         <img src="./images/command2.jpg" alt="Ольга Репина">
-                        <figcaption class="team-name">Ольга Репина</figcaption>
-                        <figcaption class="team-position">Frontend Developer</figcaption>
+                        <figcaption class="team-name">Ольга Репина<br>
+                        <span class="team-position">Frontend Developer</span></figcaption>
+                        <!-- <figcaption class="team-position">Frontend Developer</figcaption> -->
                     </figure>
                 </li>
                 <li class="team-item">
                     <figure>
                         <img src="./images/command3.jpg" alt="Николай Тарасов">
-                        <figcaption class="team-name">Николай Тарасов</figcaption>
-                        <figcaption class="team-position">Marketing</figcaption>
+                        <figcaption class="team-name">Николай Тарасов<br>
+                        <span class="team-position">Marketing</span></figcaption>
+                        <!-- <figcaption class="team-position">Marketing</figcaption> -->
                     </figure>
                 </li>
                 <li class="team-item">
                     <figure>
                         <img src="./images/command4.jpg" alt="Михаил Ермаков">
-                        <figcaption class="team-name">Михаил Ермаков</figcaption>
-                        <figcaption class="team-position">UI Designer</figcaption>                        
+                        <figcaption class="team-name">Михаил Ермаков<br>
+                        <span class="team-position">UI Designer</span></figcaption>
+                        <!-- <figcaption class="team-position">UI Designer</figcaption> -->
                     </figure>
                 </li>
             </ul>
