--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             </ul>
         </section>
         <section class="work">
-            <h2 class="work-titles">Чем мы занимаемся</h2>
+            <!-- H2 вспомогательный, скроется в CSS -->
+            <h2 class="work-titles">Чем мы занимаемся</h2> 
             <ul class="work-list">
                 <li class="work-item">
                     <a href=""><img src="./images/pic1.png" alt="codding in tablet with keyboard"></a>                        
@@ -109,6 +110,7 @@
         <a href="/index.html" class="footer-logo">
         Web<span class="logo-secondword2">Studio</span>
         </a>
+        <!-- H3 вспомогательный, скроется в CSS -->
         <h3 class="footer-contacts-title">Контакты</h3>
         <ul class="footer-contacts-list">
             <li class="footer-contacts-item">г. Киев, пр-т Леси Украинки, 26</li>
@@ -116,7 +118,7 @@
             <li class="footer-contacts-item-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
 
-
+<!-- Как правильно сделать подвал с контактами? -->
         <!-- <div class="footer-contact">
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <p><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></p>
@@ -124,6 +126,6 @@
         </div> -->
     </footer>
 
-
+<!-- Как правильно сделать секцию НАША КОМАНДА может не фигурами нужно было? -->
 </body>
 </html>
