replace PNG and JPG

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <h2 class="work-titles">Чем мы занимаемся</h2> 
             <ul class="work-list">
                 <li class="work-item">
-                    <a href=""><img src="./images/pic1.png" alt="codding in tablet with keyboard"></a>                        
+                    <a href=""><img src="./images/pic1.jpg" alt="codding in tablet with keyboard"></a>                        
                 </li>
                 <li class="work-item">
-                    <a href=""><img src="./images/pic2.png" alt="mobil apps design"></a>
+                    <a href=""><img src="./images/pic2.jpg" alt="mobil apps design"></a>
                 </li>
                 <li class="work-item">
-                    <a href=""><img src="./images/pic3.png" alt="color design"></a>
+                    <a href=""><img src="./images/pic3.jpg" alt="color design"></a>
                 </li>
             </ul>
         </section>
