--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <h2 class="work-titles">Чем мы занимаемся</h2> 
             <ul class="work-list">
                 <li class="work-item">
-                    <a href=""><img src="./images/pic1.jpg" alt="codding in tablet with keyboard"></a>                        
+                    <a href=""><img src="./images/pic1.jpg" alt="codding in tablet with keyboard" width="370"></a>                        
                 </li>
                 <li class="work-item">
-                    <a href=""><img src="./images/pic2.jpg" alt="mobil apps design"></a>
+                    <a href=""><img src="./images/pic2.jpg" alt="mobil apps design" width="370"></a>
                 </li>
                 <li class="work-item">
-                    <a href=""><img src="./images/pic3.jpg" alt="color design"></a>
+                    <a href=""><img src="./images/pic3.jpg" alt="color design" width="370"></a>
                 </li>
             </ul>
         </section>
@@ -72,7 +72,7 @@
             <ul class="team-list">
                 <li class="team-item">
                     <figure>
-                        <img src="./images/command1.jpg" alt="Игорь Демьяненко">
+                        <img src="./images/command1.jpg" alt="Игорь Демьяненко" width="270">
                         <figcaption class="team-name">Игорь Демьяненко<br>
                         <span class="team-position">Product Designer</span></figcaption>
                         <!-- <figcaption class="team-position">Product Designer</figcaption> -->
@@ -80,7 +80,7 @@
                 </li>
                 <li class="team-item">
                     <figure>
-                        <img src="./images/command2.jpg" alt="Ольга Репина">
+                        <img src="./images/command2.jpg" alt="Ольга Репина" width="270">
                         <figcaption class="team-name">Ольга Репина<br>
                         <span class="team-position">Frontend Developer</span></figcaption>
                         <!-- <figcaption class="team-position">Frontend Developer</figcaption> -->
@@ -88,7 +88,7 @@
                 </li>
                 <li class="team-item">
                     <figure>
-                        <img src="./images/command3.jpg" alt="Николай Тарасов">
+                        <img src="./images/command3.jpg" alt="Николай Тарасов" width="270">
                         <figcaption class="team-name">Николай Тарасов<br>
                         <span class="team-position">Marketing</span></figcaption>
                         <!-- <figcaption class="team-position">Marketing</figcaption> -->
@@ -96,7 +96,7 @@
                 </li>
                 <li class="team-item">
                     <figure>
-                        <img src="./images/command4.jpg" alt="Михаил Ермаков">
+                        <img src="./images/command4.jpg" alt="Михаил Ермаков" width="270">
                         <figcaption class="team-name">Михаил Ермаков<br>
                         <span class="team-position">UI Designer</span></figcaption>
                         <!-- <figcaption class="team-position">UI Designer</figcaption> -->
