--- a/index.html
+++ b/index.html
@@ -112,18 +112,13 @@
         </a>
         <!-- H3 вспомогательный, скроется в CSS -->
         <h3 class="footer-contacts-title">Контакты</h3>
-        <ul class="footer-contacts-list">
-            <li class="footer-contacts-item">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="footer-contacts-item-mail"><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></li>
-            <li class="footer-contacts-item-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-
-<!-- Как правильно сделать подвал с контактами? -->
-        <!-- <div class="footer-contact">
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <p><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></p>
-            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
-        </div> -->
+        <address>
+            <ul class="footer-contacts-list">
+                <li class="footer-contacts-item">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="footer-contacts-item-mail"><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></li>
+                <li class="footer-contacts-item-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
     </footer>
 
 <!-- Как правильно сделать секцию НАША КОМАНДА может не фигурами нужно было? -->
