--- a/index.html
+++ b/index.html
@@ -1,126 +1,129 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <header>
-        <a href="/index.html" class="logo">
-            Web<span class="logo-secondword1">Studio</span>
-        </a>
-        <nav>
-            <ul>
-                <li>Студия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
-            </ul>
-        </nav>
-        <div class="header-contact">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </div>
+      <a href="./index.html" class="logo"> Web<span class="logo-secondword1">Studio</span> </a>
+      <nav>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="header-contact">
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
 
     <main>
-        <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-button">Заказать услугу</button>
-        </section>   
-        <section class="skills">
-            <h2 class="skills-title">Наши преимущества</h2>
-            <ul class="skils-list">
-                <li class="skills-item">
-                    <H3  class="skills-item-titles">Внимание к деталям</H3>
-                    <p class="skills-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="skills-item">
-                    <H3  class="skills-item-titles">Пунктуальность</H3>
-                    <p class="skills-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="skills-item">
-                    <H3  class="skills-item-titles">Планирование</H3>
-                    <p class="skills-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="skills-item">
-                    <H3  class="skills-item-titles">Современные</H3>
-                    <p class="skills-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="work">
-            <!-- H2 вспомогательный, скроется в CSS -->
-            <h2 class="work-titles">Чем мы занимаемся</h2> 
-            <ul class="work-list">
-                <li class="work-item">
-                    <a href=""><img src="./images/pic1.jpg" alt="codding in tablet with keyboard" width="370"></a>                        
-                </li>
-                <li class="work-item">
-                    <a href=""><img src="./images/pic2.jpg" alt="mobil apps design" width="370"></a>
-                </li>
-                <li class="work-item">
-                    <a href=""><img src="./images/pic3.jpg" alt="color design" width="370"></a>
-                </li>
-            </ul>
-        </section>
-<!-- НАША КОМАНДА -->
-        <section class="team">
-            <h2 class="team-titles">Наша команда</h2>
-            <ul class="team-list">
-                <li class="team-item">
-                    <figure>
-                        <img src="./images/command1.jpg" alt="Игорь Демьяненко" width="270">
-                        <figcaption class="team-name">Игорь Демьяненко<br>
-                        <span class="team-position">Product Designer</span></figcaption>
-                        <!-- <figcaption class="team-position">Product Designer</figcaption> -->
-                    </figure>
-                </li>
-                <li class="team-item">
-                    <figure>
-                        <img src="./images/command2.jpg" alt="Ольга Репина" width="270">
-                        <figcaption class="team-name">Ольга Репина<br>
-                        <span class="team-position">Frontend Developer</span></figcaption>
-                        <!-- <figcaption class="team-position">Frontend Developer</figcaption> -->
-                    </figure>
-                </li>
-                <li class="team-item">
-                    <figure>
-                        <img src="./images/command3.jpg" alt="Николай Тарасов" width="270">
-                        <figcaption class="team-name">Николай Тарасов<br>
-                        <span class="team-position">Marketing</span></figcaption>
-                        <!-- <figcaption class="team-position">Marketing</figcaption> -->
-                    </figure>
-                </li>
-                <li class="team-item">
-                    <figure>
-                        <img src="./images/command4.jpg" alt="Михаил Ермаков" width="270">
-                        <figcaption class="team-name">Михаил Ермаков<br>
-                        <span class="team-position">UI Designer</span></figcaption>
-                        <!-- <figcaption class="team-position">UI Designer</figcaption> -->
-                    </figure>
-                </li>
-            </ul>
-        </section>
-    </main>
-<!-- ПОДВАЛ -->
-    <footer class="footer">
-        <a href="/index.html" class="footer-logo">
-        Web<span class="logo-secondword2">Studio</span>
-        </a>
-        <!-- H3 вспомогательный, скроется в CSS -->
-        <h3 class="footer-contacts-title">Контакты</h3>
-        <address>
-            <ul class="footer-contacts-list">
-                <li class="footer-contacts-item">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="footer-contacts-item-mail"><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></li>
-                <li class="footer-contacts-item-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-button" type="button">Заказать услугу</button>
+      </section>
+      <!-- Наши преимущества -->
+      <section class="skills">
+        <h2 class="skills-title" hidden>Наши преимущества</h2>
+        <ul class="skils-list">
+          <li class="skills-item">
+            <h3 class="skills-item-titles">Внимание к деталям</h3>
+            <p class="skills-item-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
+          </li>
+          <li class="skills-item">
+            <h3 class="skills-item-titles">Пунктуальность</h3>
+            <p class="skills-item-text">
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li class="skills-item">
+            <h3 class="skills-item-titles">Планирование</h3>
+            <p class="skills-item-text">
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li class="skills-item">
+            <h3 class="skills-item-titles">Современные</h3>
+            <p class="skills-item-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Чем мы занимаемся -->
+      <section class="work">
+        <h2 class="work-titles">Чем мы занимаемся</h2>
+        <ul class="work-list">
+          <li class="work-item">
+            <img src="./images/pic1.jpg" alt="codding in tablet with keyboard" width="370" />
+          </li>
 
-<!-- Как правильно сделать секцию НАША КОМАНДА может не фигурами нужно было? -->
-</body>
+          <li class="work-item">
+            <img src="./images/pic2.jpg" alt="mobil apps design" width="370" />
+          </li>
+          <li class="work-item">
+            <img src="./images/pic3.jpg" alt="color design" width="370" />
+          </li>
+        </ul>
+      </section>
+      <!-- НАША КОМАНДА -->
+      <section class="team">
+        <h2 class="team-titles">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img src="./images/command1.jpg" alt="Игорь Демьяненко" width="270" />
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-position">Product Designer</p>
+          </li>
+          <li class="team-item">
+            <img src="./images/command2.jpg" alt="Ольга Репина" width="270" />
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-position">Frontend Developer</p>
+          </li>
+          <li class="team-item">
+            <img src="./images/command3.jpg" alt="Николай Тарасов" width="270" />
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-position">Marketing</p>
+          </li>
+          <li class="team-item">
+            <img src="./images/command4.jpg" alt="Михаил Ермаков" width="270" />
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- ПОДВАЛ -->
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">
+        Web<span class="logo-secondword2">Studio</span>
+      </a>
+      <h3 class="footer-contacts-title" hidden>Контакты</h3>
+      <address>
+        <ul class="footer-contacts-list">
+          <li class="footer-contacts-item">
+            <a
+              href="https://goo.gl/maps/wKxKqBCNigjRbiVU8"
+              target="_blank"
+              rel="noreferrer noopener"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li class="footer-contacts-item-mail">
+            <a href="mailto:info@devstudio.com" class="">info@devstudio.com</a>
+          </li>
+          <li class="footer-contacts-item-mail">
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
